--- a/src/components/styles/Header.scss
+++ b/src/components/styles/Header.scss
@@ -5,8 +5,8 @@
 
 .wallet-header-content {
   display: flex;
-  // justify-content: space-between;
-  // align-items: center;
+   justify-content: space-between;
+   align-items: center;
   padding: 20px 0;
 
   .xcm-send-btn, .xcm-send-btn-wallet {
